# q3ik-edit

./: .gitignore  .rules  Cargo.toml  README.md
 crates/release_channel/src/: lib.rs
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: fork_ci.yml  nightly_macos.yml
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json
assets/keymaps/linux/: jetbrains.json
assets/keymaps/macos/: jetbrains.json
crates/acp_thread/: Cargo.toml
crates/action_log/: Cargo.toml
crates/activity_indicator/src/: activity_indicator.rs
crates/agent/: Cargo.toml
crates/agent_servers/: Cargo.toml
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: agent_configuration.rs  agent_panel.rs  context_server_configuration.rs
crates/agent_ui/src/agent_configuration/: configure_context_server_modal.rs
crates/ai_onboarding/: Cargo.toml
crates/auto_update/: Cargo.toml
crates/auto_update_ui/: Cargo.toml
crates/cli/: Cargo.toml
crates/client/: Cargo.toml
crates/client/src/: telemetry.rs  user.rs
crates/codestral/src/: codestral.rs
crates/command_palette/: Cargo.toml
crates/component_preview/: Cargo.toml
crates/copilot/: Cargo.toml
crates/crashes/src/: crashes.rs
crates/csv_preview/: Cargo.toml
crates/db/: Cargo.toml
crates/edit_prediction/: Cargo.toml
crates/edit_prediction/src/: capture_example.rs
crates/edit_prediction_cli/: Cargo.toml
crates/edit_prediction_cli/src/: filter_languages.rs  headless.rs
crates/edit_prediction_context/: Cargo.toml
crates/edit_prediction_ui/: Cargo.toml
crates/editor/: Cargo.toml
crates/editor/src/: code_actions.rs  code_context_menus.rs  editor.rs  editor_tests.rs  element.rs  items.rs  navigation.rs
crates/editor/src/inlays/: inlay_hints.rs
crates/editor_benchmarks/: Cargo.toml
crates/eval_cli/: Cargo.toml
crates/eval_cli/src/: headless.rs
crates/feature_flags/: Cargo.toml
crates/feature_flags/src/: feature_flags.rs  lib.rs
crates/feature_flags_macros/src/: feature_flags_macros.rs
crates/file_finder/: Cargo.toml
crates/file_finder/src/: file_finder.rs
crates/fs/: Cargo.toml
crates/fs/src/: fs_watcher.rs
crates/git_ui/: Cargo.toml
crates/git_ui/src/: git_graph.rs
crates/gpui/: Cargo.toml  build.rs
crates/gpui/src/: app.rs  gpui.rs  platform.rs  platform_scheduler.rs  scene.rs  style.rs  svg_renderer.rs  window.rs
crates/gpui/src/keymap/: context.rs
crates/gpui/src/platform/: keystroke.rs
crates/gpui/src/platform/test/: platform.rs  window.rs
crates/gpui_linux/: Cargo.toml
crates/gpui_linux/src/: gpui_linux.rs
crates/gpui_platform/: Cargo.toml
crates/gpui_platform/src/: gpui_platform.rs
crates/grammars/: Cargo.toml
crates/grammars/src/: grammars.rs
crates/input_latency_ui/src/: input_latency_ui.rs
crates/install_cli/: Cargo.toml
crates/json_schema_store/: Cargo.toml
crates/json_schema_store/src/: json_schema_store.rs
crates/keymap_editor/: Cargo.toml
crates/language/: Cargo.toml
crates/language_models/: Cargo.toml
crates/language_models/src/: language_models.rs
crates/language_tools/: Cargo.toml
crates/languages/: Cargo.toml
crates/languages/src/: lib.rs
crates/livekit_client/: Cargo.toml
crates/lsp/: Cargo.toml
crates/notifications/: Cargo.toml
crates/notifications/src/: notification_store.rs
crates/onboarding/: Cargo.toml
crates/project/: Cargo.toml
crates/project/src/: context_server_store.rs  project.rs  project_settings.rs  task_inventory.rs
crates/project/src/context_server_store/: registry.rs
crates/project/tests/integration/: project_tests.rs
crates/project_benchmarks/: Cargo.toml
crates/project_panel/: Cargo.toml
crates/project_symbols/: Cargo.toml
crates/recent_projects/: Cargo.toml
crates/recent_projects/src/: remote_connections.rs  remote_servers.rs
crates/release_channel/: Cargo.toml
crates/release_channel/src/: lib.rs
crates/remote/: Cargo.toml
crates/remote/src/: lib.rs  remote.rs  remote_client.rs  remote_identity.rs  transport.rs
crates/remote/src/transport/: docker.rs  mock.rs  mod.rs  ssh.rs  wsl.rs
crates/remote_connection/: Cargo.toml
crates/remote_connection/src/: remote_connection.rs
crates/remote_server/: Cargo.toml
crates/remote_server/src/: headless_project.rs  remote_editing_tests.rs  server.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: auth.rs  conn.rs  lib.rs  notification.rs  peer.rs  proto_client.rs  rpc.rs
crates/settings/: Cargo.toml
crates/settings_ui/: Cargo.toml
crates/sidebar/: Cargo.toml
crates/system_specs/: Cargo.toml
crates/tasks_ui/src/: tasks_ui.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs  telemetry.rs
crates/telemetry_events/: Cargo.toml
crates/telemetry_events/src/: lib.rs  telemetry_events.rs
crates/terminal/: Cargo.toml
crates/terminal_view/: Cargo.toml
crates/theme_selector/: Cargo.toml
crates/theme_selector/src/: icon_theme_selector.rs  theme_selector.rs
crates/title_bar/: Cargo.toml
crates/title_bar/src/: title_bar.rs
crates/util/src/: paths.rs
crates/util_macros/: Cargo.toml
crates/util_macros/src/: util_macros.rs
crates/vim/: Cargo.toml
crates/vim/src/: test.rs
crates/vim/src/test/: neovim_connection.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: persistence.rs  tasks.rs  welcome.rs  workspace.rs
crates/workspace/src/persistence/: model.rs
crates/worktree/: Cargo.toml
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  reliability.rs  visual_test_runner.rs  zed.rs
crates/zed/src/zed/: app_menus.rs  open_listener.rs
crates/zed_actions/src/: lib.rs
crates/zed_credentials_provider/: Cargo.toml
