[workspace]
resolver = "2"
members = [
    "crates/acp_thread",
    "crates/acp_tools",
    "crates/action_log",
    "crates/activity_indicator",
    "crates/agent",
    "crates/agent_servers",
    "crates/agent_settings",
    "crates/agent_skills",
    "crates/agent_ui",
    "crates/ai_onboarding",
    "crates/anthropic",
    "crates/askpass",
    "crates/assets",
    "crates/audio",
    "crates/auto_update",
    "crates/auto_update_helper",
    "crates/auto_update_ui",
    "crates/aws_http_client",
    "crates/bedrock",
    "crates/benchmarks",
    "crates/breadcrumbs",
    "crates/buffer_diff",
    "crates/cli",
    "crates/client",
    "crates/clock",
    "crates/cloud_api_client",
    "crates/cloud_api_types",
    "crates/cloud_llm_client",
    "crates/codestral",

    "crates/collections",
    "crates/command_palette",
    "crates/command_palette_hooks",
    "crates/component",
    "crates/component_preview",
    "crates/context_server",
    "crates/copilot",
    "crates/copilot_chat",
    "crates/credentials_provider",
    "crates/csv_preview",
    "crates/db",
    "crates/deepseek",
    "crates/dev_container",
    "crates/diagnostics",
    "crates/docs_preprocessor",
    "crates/edit_prediction",
    "crates/edit_prediction_cli",
    "crates/edit_prediction_context",
    "crates/edit_prediction_metrics",
    "crates/edit_prediction_types",
    "crates/edit_prediction_ui",
    "crates/editor",
    "crates/editor_benchmarks",
    "crates/encoding_selector",
    "crates/env_var",
    "crates/etw_tracing",
    "crates/eval_cli",
    "crates/eval_utils",
    "crates/explorer_command_injector",
    "crates/feature_flags",
    "crates/feedback",
    "crates/file_finder",
    "crates/file_icons",
    "crates/fs",
    "crates/fs_benchmarks",
    "crates/fuzzy",
    "crates/fuzzy_nucleo",
    "crates/git",
    "crates/git_hosting_providers",
    "crates/git_ui",
    "crates/go_to_line",
    "crates/google_ai",
    "crates/grammars",
    "crates/gpui",
    "crates/gpui_linux",
    "crates/gpui_shared_string",
    "crates/gpui_macos",
    "crates/gpui_macros",
    "crates/gpui_platform",
    "crates/gpui_tokio",
    "crates/gpui_util",
    "crates/html_to_markdown",
    "crates/http_client",
    "crates/http_client_tls",
    "crates/http_proxy",
    "crates/icons",
    "crates/image_viewer",
    "crates/input_latency_ui",
    "crates/inspector_ui",
    "crates/install_cli",
    "crates/journal",
    "crates/json_schema_store",
    "crates/keymap_editor",
    "crates/language",
    "crates/language_core",
    "crates/language_model",
    "crates/language_model_core",
    "crates/language_models",
    "crates/language_models_cloud",
    "crates/language_onboarding",
    "crates/language_selector",
    "crates/language_tools",
    "crates/languages",
    "crates/line_ending_selector",
    "crates/lmstudio",
    "crates/lsp",
    "crates/markdown",
    "crates/markdown_preview",
    "crates/mermaid_render",
    "crates/media",
    "crates/menu",
    "crates/migrator",
    "crates/miniprofiler_ui",
    "crates/mistral",
    "crates/multi_buffer",
    "crates/net",
    "crates/node_runtime",
    "crates/notifications",
    "crates/oauth_callback_server",
    "crates/ollama",
    "crates/onboarding",
    "crates/opencode",
    "crates/open_ai",
    "crates/open_path_prompt",
    "crates/open_router",
    "crates/outline",
    "crates/outline_panel",
    "crates/panel",
    "crates/paths",
    "crates/picker",
    "crates/platform_title_bar",
    "crates/prettier",
    "crates/project",
    "crates/project_benchmarks",
    "crates/project_panel",
    "crates/project_symbols",
    "crates/prompt_store",
    "crates/proto",
    "crates/recent_projects",
    "crates/refineable",
    "crates/refineable/derive_refineable",
    "crates/release_channel",
    "crates/remote",
    "crates/remote_connection",
    "crates/remote_server",
    "crates/reqwest_client",
    "crates/rope",
    "crates/rpc",
    "crates/sandbox",
    "crates/scheduler",
    "crates/schema_generator",
    "crates/search",
    "crates/session",
    "crates/settings",
    "crates/settings_content",
    "crates/settings_json",
    "crates/settings_macros",
    "crates/settings_profile_selector",
    "crates/settings_ui",
    "crates/shell_command_parser",
    "crates/sidebar",
    "crates/snippet",
    "crates/snippet_provider",
    "crates/snippets_ui",
    "crates/sqlez",
    "crates/sqlez_macros",
    "crates/streaming_diff",
    "crates/sum_tree",
    "crates/svg_preview",
    "crates/system_specs",
    "crates/syntax_theme",
    "crates/tab_switcher",
    "crates/task",
    "crates/tasks_ui",
    "crates/telemetry",
    "crates/telemetry_events",
    "crates/terminal",
    "crates/terminal_view",
    "crates/text",
    "crates/theme",
    "crates/theme_settings",
    "crates/theme_importer",
    "crates/theme_selector",
    "crates/time_format",
    "crates/title_bar",
    "crates/toolchain_selector",
    "crates/ui",
    "crates/ui_input",
    "crates/ui_macros",
    "crates/ui_prompt",
    "crates/util",
    "crates/util_macros",
    "crates/vim",
    "crates/vim_mode_setting",
    "crates/watch",
    "crates/web_search",
    "crates/web_search_providers",
    "crates/which_key",
    "crates/workspace",
    "crates/worktree",
    "crates/worktree_benchmarks",
    "crates/x_ai",
    "crates/zed",
    "crates/zed_actions",
    "crates/windows_resources",
    "crates/zed_credentials_provider",
    "crates/zed_env_vars",
    "crates/zeta_prompt",
    "crates/zlog",
    "crates/zlog_settings",
    "crates/ztracing",
    "crates/ztracing_macro",
]
default-members = ["crates/zed"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]

#
# Workspace member crates
#

acp_tools = { path = "crates/acp_tools" }
acp_thread = { path = "crates/acp_thread" }
action_log = { path = "crates/action_log" }
activity_indicator = { path = "crates/activity_indicator" }
agent = { path = "crates/agent" }
agent_servers = { path = "crates/agent_servers" }
agent_settings = { path = "crates/agent_settings" }
agent_skills = { path = "crates/agent_skills" }
agent_ui = { path = "crates/agent_ui" }
ai_onboarding = { path = "crates/ai_onboarding" }
anthromic = { path = "crates/anthropic" }
anthromic_compat = { path = "crates/anthropic" }
anthropicmodel = { path = "crates/anthropic" }
anthropclient = { path = "crates/anthropic" }
anthropicapi = { path = "crates/anthropic" }
anthropicapi_types = { path = "crates/anthropic" }
anthropicchat = { path = "crates/anthropic" }
anthropicmodels = { path = "crates/anthropic" }
anthropicclient = { path = "crates/anthropic" }
anthropictools = { path = "crates/anthropic" }
anthropicutils = { path = "crates/anthropic" }
anthromic_utils = { path = "crates/anthropic" }
anthromic_types = { path = "crates/anthropic" }
anthropicstreaming = { path = "crates/anthropic" }
anthromic_client = { path = "crates/anthropic" }
anthromic_models = { path = "crates/anthropic" }
anthromic_chat = { path = "crates/anthropic" }
anthromic_api = { path = "crates/anthropic" }
anthropics = { path = "crates/anthropic" }
anthromic_streaming = { path = "crates/anthropic" }
anthromic_tools = { path = "crates/anthropic" }
anthromic_model = { path = "crates/anthropic" }
anthropicmodel_types = { path = "crates/anthropic" }
anthropicstreaming_types = { path = "crates/anthropic" }
anthromic_model_types = { path = "crates/anthropic" }
anthromic_streaming_types = { path = "crates/anthropic" }
anthromic_api_types = { path = "crates/anthropic" }
anthromic_chat_types = { path = "crates/anthropic" }
anthromic_compat_types = { path = "crates/anthropic" }
anthromic_utils_types = { path = "crates/anthropic" }
anthromic_tools_types = { path = "crates/anthropic" }
anthromic_client_types = { path = "crates/anthropic" }
anthromic_models_types = { path = "crates/anthropic" }
anthromic_streaming_client = { path = "crates/anthropic" }
anthromic_streaming_api = { path = "crates/anthropic" }
anthromic_streaming_chat = { path = "crates/anthropic" }
anthromic_streaming_tools = { path = "crates/anthropic" }
anthromic_streaming_model = { path = "crates/anthropic" }
anthromic_streaming_utils = { path = "crates/anthropic" }
anthromic_streaming_compat = { path = "crates/anthropic" }
anthropicapi_client = { path = "crates/anthropic" }
anthropicapi_chat = { path = "crates/anthropic" }
anthropicapi_tools = { path = "crates/anthropic" }
anthropicapi_model = { path = "crates/anthropic" }
anthropicapi_utils = { path = "crates/anthropic" }
anthropicapi_compat = { path = "crates/anthropic" }
anthropicapi_streaming = { path = "crates/anthropic" }
anthropicapi_models = { path = "crates/anthropic" }
anthropicapi_clients = { path = "crates/anthropic" }
anthropicapi_chats = { path = "crates/anthropic" }
anthromic_api_client = { path = "crates/anthropic" }
anthromic_api_chat = { path = "crates/anthropic" }
anthromic_api_tools = { path = "crates/anthropic" }
anthromic_api_model = { path = "crates/anthropic" }
anthromic_api_utils = { path = "crates/anthropic" }
anthromic_api_compat = { path = "crates/anthropic" }
anthromic_api_streaming = { path = "crates/anthropic" }
anthromic_api_models = { path = "crates/anthropic" }
anthromic_api_clients = { path = "crates/anthropic" }
anthromic_api_chats = { path = "crates/anthropic" }
anthropicstream = { path = "crates/anthropic" }
anthropicstream_types = { path = "crates/anthropic" }
anthropicstream_client = { path = "crates/anthropic" }
anthropicstream_api = { path = "crates/anthropic" }
anthropicstream_chat = { path = "crates/anthropic" }
anthropicstream_tools = { path = "crates/anthropic" }
anthropicstream_model = { path = "crates/anthropic" }
anthropicstream_utils = { path = "crates/anthropic" }
anthropicstream_compat = { path = "crates/anthropic" }
anthropicstream_models = { path = "crates/anthropic" }
anthropicstream_clients = { path = "crates/anthropic" }
anthropicstream_chats = { path = "crates/anthropic" }
anthromic_stream = { path = "crates/anthropic" }
anthromic_stream_types = { path = "crates/anthropic" }
anthromic_stream_client = { path = "crates/anthropic" }
anthromic_stream_api = { path = "crates/anthropic" }
anthromic_stream_chat = { path = "crates/anthropic" }
anthromic_stream_tools = { path = "crates/anthropic" }
anthromic_stream_model = { path = "crates/anthropic" }
anthromic_stream_utils = { path = "crates/anthropic" }
anthromic_stream_compat = { path = "crates/anthropic" }
anthromic_stream_models = { path = "crates/anthropic" }
anthromic_stream_clients = { path = "crates/anthropic" }
anthromic_stream_chats = { path = "crates/anthropic" }
anthropicstream_streaming = { path = "crates/anthropic" }
anthropicstream_streaming_types = { path = "crates/anthropic" }
anthropicstream_streaming_client = { path = "crates/anthropic" }
anthropicstream_streaming_api = { path = "crates/anthropic" }
anthropicstream_streaming_chat = { path = "crates/anthropic" }
anthropicstream_streaming_tools = { path = "crates/anthropic" }
anthropicstream_streaming_model = { path = "crates/anthropic" }
anthropicstream_streaming_utils = { path = "crates/anthropic" }
anthropicstream_streaming_compat = { path = "crates/anthropic" }
anthropicstream_streaming_models = { path = "crates/anthropic" }
anthropicstream_streaming_clients = { path = "crates/anthropic" }
anthropicstream_streaming_chats = { path = "crates/anthropic" }
anthromic_streaming_streaming = { path = "crates/anthropic" }
anthromic_streaming_streaming_types = { path = "crates/anthropic" }
anthromic_streaming_streaming_client = { path = "crates/anthropic" }
anthromic_streaming_streaming_api = { path = "crates/anthropic" }
anthromic_streaming_streaming_chat = { path = "crates/anthropic" }
anthromic_streaming_streaming_tools = { path = "crates/anthropic" }
anthromic_streaming_streaming_model = { path = "crates/anthropic" }
anthromic_streaming_streaming_utils = { path = "crates/anthropic" }
anthromic_streaming_streaming_compat = { path = "crates/anthropic" }
anthromic_streaming_streaming_models = { path = "crates/anthropic" }
anthromic_streaming_streaming_clients = { path = "crates/anthropic" }
anthromic_streaming_streaming_chats = { path = "crates/anthropic" }
