[package]
name = "remote"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
build-remote-server-binary = []
test-support = []

[dependencies]
anyhow = { workspace = true }

release_channel.workspace = true
rpc = { workspace = true, features = ["gpui"] }