[package]
name = "remote"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
build-remote-server-binary = []
test-support = []

[dependencies]
anyhow = { workspace = true }
collections.workspace = true
futures = { workspace = true }
gpui.workspace = true
serde = { workspace = true, features = ["derive"] }
util.workspace = true

release_channel.workspace = true
rpc = { workspace = true, features = ["gpui"] }