[package]
name = "remote_connection"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/remote_connection.rs"

[features]
default = []
test-support = ["remote/test-support"]

[dependencies]
anyhow.workspace = true
gpui.workspace = true
remote.workspace = true

release_channel.workspace = true