[package]
description = "Re-export shim for proto types used across the editor codebase"
edition.workspace = true
name = "rpc"
version = "0.1.0"
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/rpc.rs"
doctest = false

[features]
test-support = ["proto/test-support"]

[dependencies]
proto.workspace = true

[dev-dependencies]
proto = { workspace = true, features = ["test-support"] }
