[package]
name = "rpc"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
gpui = []
test-support = []

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
gpui = { workspace = true }
parking_lot = { workspace = true }
proto = { workspace = true }
